<resources>
    <string name="app_name">Project Manager</string>
    <string name="project_manager">Project Manager</string>
    <string name="lets_get_started">Lets Get Started</string>
    <string name="collaborate_and_plan__">Collaborate and plan togather accroess multiple devices on project manager minimaliest interface</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_screen_project_manager_image">Login screen project manager image</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_name_id____">Enter your name, email and password to register with us</string>
    <string name="enter_you_name">Enter you name</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="enter_a_strong_password">Enter a strong password</string>
    <string name="welcome_to_login_activity">welcome to login activity</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="enter_you_email_and_password_to_login">Enter you email and password to login with us</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="if_you_already_have_an_account">If you already have an account</string>
    <string name="or_sing_in_instead"><u>or sing in instead</u></string>
    <string name="title_activity_login_main">LoginActivityMain</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="please_wait">Please Wait</string>
    <string name="loading">Loading</string>
</resources>