<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/MainFragment">

    <fragment
        android:id="@+id/MainFragment"
        android:name="com.example.projectmanager.login.ui.MainFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_main">

        <action
            android:id="@+id/action_MainFragment_to_SignUpFragment"
            app:destination="@id/SignUpFragment" />
        <action
            android:id="@+id/action_MainFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/SignUpFragment"
        android:name="com.example.projectmanager.login.ui.SignUpFragment"
        android:label="@string/sign_up"
        tools:layout="@layout/fragment_signup">

        <action
            android:id="@+id/action_SignUpFragment_to_MainFragment"
            app:destination="@id/MainFragment" />
        <action
            android:id="@+id/action_SignUpFragment_to_loginFragment2"
            app:destination="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.projectmanager.login.ui.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login" />
</navigation>